Click resets throwball timer

--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <p id="overCount">0.0</p>
-    <button onclick="throwBall()">Bowl</button>
+    <button onclick="clickThrowBall()">Bowl</button>
   <script src="main.js" charset="utf-8" type="text/javascript"></script>
   </body>
 </html>
