Added formatting for main page, but somehow broke click functionality

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,24 @@
     <title>Idle Cricket</title>
   </head>
   <body>
-    <p id="overCount">0.0</p>
+      <h2>Game #</h2>
+<table style="width:100%">
+  <tr>
+    <th>Team A</th>
+    <th>Team B</th>
+  </tr>
+  <tr>
+    <align:center><td><id="runsA"> 0 / <id="outsA"> 0 </td></align:center>
+    <td><id="runsB"> 0 / <id="outsB"> 0 </td>  </tr>
+  <tr>
+    <td><id="overCountA">0.0</td>
+    <td><id="overCountB">0.0</td>
+  </tr>
+  <tr>
+      <td><id="crrA">CRR 0.00</td>
+      <td><id="crrB">CRR 0.00 / <id="rrrB">RRR 0.00</td>
+  </tr>
+</table>
     <button onclick="clickThrowBall()">Bowl</button>
   <script src="main.js" charset="utf-8" type="text/javascript"></script>
   </body>
