updated the overs and labels

--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
       <td>CRR <label id="crrB">0.00</label>/ RRR <label id="rrrB">0.00</label></td>
   </tr>
 </table>
-    <button onclick="clickThrowBall()">Bowl</button>
+    <div style="text-align:center"><button onclick="clickThrowBall()">Bowl</button></div>
   <script src="main.js" charset="utf-8" type="text/javascript"></script>
   </body>
 </html>
