Added random bowl results; needs fixing

--- a/Index.html
+++ b/Index.html
@@ -16,11 +16,11 @@
     <td><label id="runsB"> 0 </label>/<label id="outsB"> 0 </label></td>
     </tr>
   <tr>
-    <td id="overCountA">0.0</td>
-    <td id="overCountB">0.0</td>
+    <td><label id="overCountA">0.0</label></td>
+    <td><label id="overCountB">0.0</label></td>
   </tr>
   <tr>
-      <td id="crrA">CRR 0.00</td> 
+      <td>CRR <label id="crrA">0.00</label></td>
       <td>CRR <label id="crrB">0.00</label>/ RRR <label id="rrrB">0.00</label></td>
   </tr>
 </table>
