added onhit stats (does not work) and other stats

--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,11 @@
   </tr>
   <tr>
       <td>CRR <label id="crrA">0.00</label></td>
-      <td>CRR <label id="crrB">0.00</label>/ RRR <label id="rrrB">0.00</label></td>
+      <td>CRR <label id="crrB">0.00</label> / RRR <label id="rrrB">0.00</label></td>
+  </tr>
+  <tr>
+      <td></td>
+      <td><label id="runsToWin">0</label> Runs needed to win in <label id="bowlsRemaining">0</label> bowls remaining</td>
   </tr>
 </table>
     <div style="text-align:center"><button onclick="clickThrowBall()">Bowl</button></div>
