Added New Game button and actual game numbers

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <title>Idle Cricket</title>
   </head>
   <body>
-      <h2 style="text-align:center">Game #</h2>
+      <h2 style="text-align:center">Game <label id="gameNumber">1</label></h2>
 <table style="width:100%; text-align:center">
   <tr>
     <th>Team A</th>
@@ -29,6 +29,7 @@
   </tr>
 </table>
     <div style="text-align:center"><button onclick="clickThrowBall()">Bowl</button></div>
+    <div style="text-align:center"><button onClick="newGame()">New Game</button></div>
   <script src="main.js" charset="utf-8" type="text/javascript"></script>
   </body>
 </html>
