Fixed New Game button placement

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <title>Idle Cricket</title>
   </head>
   <body>
-      <h2 style="text-align:center">Game <label id="gameNumber">1</label>    <div style="text-align:right"><button onClick="newGame()">New Game</button></div></h2>
+      <h2 style="text-align:center">Game <label id="gameNumber">1</label>    <div style="text-align:center"><button onClick="newGame()">New Game</button></div></h2>
 <table style="width:100%; text-align:center">
   <tr>
     <th>Team A</th>
