tried adding gameWinner function

--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,10 @@
         <td><label id="runsToWin">0</label> Runs needed to win in <label id="bowlsRemaining">0</label> bowls remaining</td>
     </tr>
     </table>
-<div style="text-align:center"><button onclick="clickThrowBall()">Bowl</button></div>
-<script src="main.js" charset="utf-8" type="text/javascript"></script>
-</body>
+
+    <div style="text-align:center"><p label id="gameWinner"> </label></p></div>
+
+    <div style="text-align:center"><button onclick="clickThrowBall()">Bowl</button></div>
+    <script src="main.js" charset="utf-8" type="text/javascript"></script>
+    </body>
 </html>
