--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@
     </tr>
     </table>
 
-    <div style="text-align:center"><p label id="gameWinner">Winner</label></p></div>
+    <div style="text-align:center"><p label id="gameWinner"> </label></p></div>
 
     <div style="text-align:center"><button onclick="clickThrowBall()">Bowl</button></div>
     <script src="main.js" charset="utf-8" type="text/javascript"></script>
