added saves/loads/delete...broke aesthetics

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,9 @@
         <title>Idle Cricket</title>
     </head>
     <body>
-        <h2 style="text-align:center">Game <label id="gameNumber">1</label>    <div style="text-align:center"><button onClick="newGame()">New Game</button></div></h2>
+        <div style="text-align:left"><button onclick="deleteSave()">Delete Save</button></div>
+        <div style="display:flex"><div><h2 style="text-align:center">Game <label id="gameNumber">1</label></h2></div>
+        <div style="text-align:center"><button onclick="newGame()">New Game</button></div></div>
     <table style="width:100%; text-align:center">
         <colgroup>
             <col span="1" style="width: 50%;">
