--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,14 @@
     </head>
     <body>
         <div style="text-align:left"><button onclick="deleteSave()">Delete Save</button></div>
-        <div style="display:flex"><div><h2 style="text-align:center">Game <label id="gameNumber">1</label></h2></div>
-        <div style="text-align:center"><button onclick="newGame()">New Game</button></div></div>
+        <div style="display:flex; align-items: center; justify-content: center;">
+            <div>
+                <h2 style="text-align:center">Game <label id="gameNumber">1</label></h2>
+            </div>
+            <div style="text-align:center">
+                <button style="margin-left:10px;" onclick="newGame()">New Game</button>
+            </div>
+        </div>
     <table style="width:100%; text-align:center">
         <colgroup>
             <col span="1" style="width: 50%;">
