--- a/Index.html
+++ b/Index.html
@@ -43,7 +43,11 @@
 
     <div style="text-align:center"><p label id="gameWinner"> </label></p></div>
 
-    <div style="text-align:center"><button onclick="clickThrowBall()">Bowl</button></div>
+    <div style="text-align:center"><button onclick="clickThrowBall()">Bowl</button>
+        <br/>
+        <input id="speedSlider" type="range" min="1" max="6" value="6" step="0.5" onchange="changeSpeed()"></input></div>
+        <div style="text-align:center;"><label id="lblSpeed">5</label> Minutes per Game</div>
+    
     <script src="main.js" charset="utf-8" type="text/javascript"></script>
     </body>
 </html>
