--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
         <title>Idle Cricket</title>
     </head>
     <body>
-        <div style="text-align:left"><button onclick="deleteSave()">Delete Save</button></div>
+        <div style="text-align:left"><button onclick="deleteSave()">Hard Reset</button></div>
         <div style="display:flex; align-items: center; justify-content: center;">
             <div>
                 <h2 style="text-align:center">Game <label id="gameNumber">1</label></h2>
@@ -47,7 +47,7 @@
         <br/>
         <input id="speedSlider" type="range" min="1" max="6" value="6" step="0.5" onchange="changeSpeed()"></input></div>
         <div style="text-align:center;"><label id="lblSpeed">5</label> Minutes per Game</div>
-    
+
     <script src="main.js" charset="utf-8" type="text/javascript"></script>
     </body>
 </html>
