--- a/Index.html
+++ b/Index.html
@@ -33,9 +33,9 @@
     </tr>
     <tr>
         <td>CRR <label id="crrA">0.00</label></td>
-        <td>CRR <label id="crrB">0.00</label> / RRR <label id="rrrB">0.00</label></td>
+        <td>CRR <label id="crrB">0.00</label><label id="lblRRRb"> / RRR </label><label id="rrrB">0.00</label></td>
     </tr>
-    <tr>
+    <tr id="trRunsToWin">
         <td></td>
         <td><label id="runsToWin">0</label> Runs needed to win in <label id="bowlsRemaining">0</label> bowls remaining</td>
     </tr>
