Added Coinflip (doesn't work...)

--- a/Index.html
+++ b/Index.html
@@ -20,8 +20,8 @@
             <col span="1" style="width: 50%;">
         </colgroup>
     <tr>
-        <th>Team A</th>
-        <th>Team B</th>
+        <th><label id="Team 1"> Team A </label></th>
+        <th><label id="Team 2"> Team B </label></th>
     </tr>
     <tr>
         <td><label id="runsA"> 0 </label> / <label id="outsA"> 0 </label></td>
